objects/Clock_Characteristics__c.object
<CustomObject>
    <description>Child object of Customer Design Specification Object used for section Clock Characteristics
in CDS form</description>
    <fields>
        <fullName>Balanced_latencies_If_required_list_s__c</fullName>
        <label>Balanced latencies ? If required, list s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chip_input__c</fullName>
        <label>Chip input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clock_Insertion_Delay_ns__c</fullName>
        <label>Clock Insertion Delay (ns)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clock_Name_optional__c</fullName>
        <label>Clock Name (optional)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clock_choppers_or_splitters__c</fullName>
        <label>Clock choppers or splitters ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clock_gating__c</fullName>
        <label>Clock gating?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Design_Specification__c</fullName>
        <label>Customer Design Specification</label>
        <referenceTo>Custom_Design__c</referenceTo>
        <relationshipLabel>Clock Characteristicss</relationshipLabel>
        <relationshipName>Clock_Characteristicss</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Early_or_late_clocks__c</fullName>
        <label>Early or late clocks ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_MHz__c</fullName>
        <label>Frequency (MHz)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latency_Target_optional_ns__c</fullName>
        <label>Latency Target (optional) (ns)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Area_mm2__c</fullName>
        <label>Load Area (mm2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negative_Edge_clocks__c</fullName>
        <label>Negative-Edge clocks?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLL_usage__c</fullName>
        <label>PLL usage?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCB_in_the_clock_tree__c</fullName>
        <label>SCB in the clock tree?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skew_assumption_ps__c</fullName>
        <label>Skew assumption (ps)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slew_Target_optional_ps__c</fullName>
        <label>Slew Target (optional) (ps)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_net_for_clock__c</fullName>
        <label>Start net for clock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_number_of_sinks_on_clock_tree__c</fullName>
        <label>Total number of sinks on clock tree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asychronous_reset_y_n_n_a__c</fullName>
        <label>asychronous reset: (y, n, n/a)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>if_yes_name_of_reset_net__c</fullName>
        <label>- if yes, name of reset net</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Clock Characteristics</label>
    <listViews>
        <fullName>CDS_Clock_UAT</fullName>
        <columns>Customer_Design_Specification__c</columns>
        <columns>NAME</columns>
        <columns>Chip_input__c</columns>
        <columns>Clock_gating__c</columns>
        <columns>Early_or_late_clocks__c</columns>
        <columns>Frequency_MHz__c</columns>
        <columns>PLL_usage__c</columns>
        <columns>Skew_assumption_ps__c</columns>
        <columns>Clock_choppers_or_splitters__c</columns>
        <columns>Clock_Insertion_Delay_ns__c</columns>
        <columns>asychronous_reset_y_n_n_a__c</columns>
        <filterScope>Everything</filterScope>
        <label>CDS Clock - UAT</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Clock Name-{000000}</displayFormat>
        <label>Clock Characteristics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clock Characteristicss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>